--- a/css/components/projects.css
+++ b/css/components/projects.css
@@ -1,60 +1,212 @@
 .projects {
   margin-bottom: 16rem;
-  scroll-margin-top: 15rem;
+  scroll-margin-top: 30rem;
 }
 
-.projects .projects__content {
-  max-width: 56rem;
-  text-align: center;
-  margin: 0 auto 6rem;
-}
 
-.projects ul li {
+.container {
+  border-radius: 5px;
+  margin: auto;
+  margin-top: 3rem;
+  padding: 3%;
+  color: rgb(0, 0, 0);
+  font-size: 15px;
+  font-weight: bold;
+  transition: 0.5s;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  height: 100%;
+  margin-bottom: 5%;
+  width: 40%;
+  bottom: 100px;
+  transform: scale(1.2);
+  position: relative;
+  max-width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+}
+
+
+
+.form {
+  display: flex;
+  flex-direction: column;
+
+}
+
+.form div {
+  margin-bottom: 3%;
+  display: flex;
+}
+
+.form a {
+  visibility: hidden;
+  margin-top: -28px;
+}
+
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+
+}
+
+.inputStyle {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.inputStyle input {
+  padding: 2% 1rem;
+  width: 100%;
+  border-radius: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.596);
+}
+
+.inputStyle textarea {
+  padding: 2%;
+  width: 100%;
+  border-radius: 5px;
+  resize: none;
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
+
+}
+
+#forms-h1 {
+  font-size: 30px;
+  margin-bottom: 3%;
+}
+
+h2 {
+  font-size: 16px;
+  margin-bottom: 3%;
+}
+
+input.error {
+  border-color: #e50615;
+}
+
+.form a.error {
+  color: #e50615;
+  visibility: visible;
+}
+
+.center {
+  margin-right: 2%;
+  display: flex;
   align-items: center;
+}
+
+
+
+.ListCheckbox {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+  justify-content: space-around;
+}
+
+.center input {
+  margin-right: 5px;
+}
+
+#btnEnviar {
+  outline: none;
+  text-align: center;
+  border-radius: 40px;
+  background-color: transparent;
+  border: 2px solid #a52753;
+  color: #651430;;
+  letter-spacing: 1px;
+  text-shadow: 0;
+  cursor: pointer;
+  transition: all 0.25s ease;
+  top: 50%;
+  height: 30px;
+  width: 100px;
+  font-weight: 900;
+  margin-right: 15px;
+}
+
+#btnEnviar:hover {
+  background-color: var(--dark-secondary-color);
+  color: var(--white);
+  font-weight: 400;
+  font-size: 1.4rem;
+}
+
+#btnLimpar {
+  outline: none;
+  text-align: center;
+  border-radius: 40px;
+  background-color: transparent;
+  border: 2px solid #a52753;
+  color: #651430;;
+  letter-spacing: 1px;
+  text-shadow: 0;
+  cursor: pointer;
+  transition: all 0.25s ease;
+  top: 50%;
+  height: 30px;
+  width: 100px;
+  font-weight: 900;
+  margin-right: 15px;
+}
+
+#btnLimpar:hover {
+  background-color: var(--dark-secondary-color);
+  color: var(--white);
+  font-weight: 400;
+  font-size: 1.4rem;
+}
+
+.configImg {
+  align-items: center;
+  width: 100%;
   gap: 4rem;
 }
 
-.projects ul li.projects__reversed-list {
-  flex-direction: row-reverse;
+.configImg img {
+  width: 35%;
 }
 
-.projects ul li:not(:last-of-type) {
-  margin-bottom: 12rem;
+@media (max-width: 1440px) {
+  .container {
+    width: 70%;
+  }
 }
 
-.projects ul li .image img {
-  width: 100%;
-  min-width: 40rem;
-  max-width: 47rem;
-  height: auto;
+@media (max-width: 768px) {
+  .container {
+    width: 70%;
+  }
 }
 
-.projects ul li .projects__info {
-  max-width: 47rem;
-}
-
-.projects ul li .projects__info p {
-  margin: 1rem 0 4rem;
-}
-
-.projects ul li .projects__info a {
-  font-weight: 500;
-  text-decoration: underline;
-}
-
-@media only screen and (max-width: 768px) {
-  .projects ul li,
-  .projects ul li.projects__reversed-list {
-    flex-direction: column;
+@media (max-width: 425px) {
+  .container {
+    width: 70%;
   }
 
-  .projects ul li .projects__info {
-    max-width: 66rem;
+  .form div {
+    display: block;
   }
 
-  .projects ul li .image img {
-    min-width: auto;
+  .inputStyle input {
+    margin: 5px;
   }
+
+  .cardInvitation {
+    width: 90%;
+
+  }
+
 }
