--- a/css/variables.css
+++ b/css/variables.css
@@ -2,11 +2,12 @@
   --white: #ffffff;
   --gray: #d9d9d9;
   --black: #000000;
-  --primary-color: #02073e;
-  --secondary-color: #0f2137;
-  --dark-secondary-color: #3c415c;
-  --tertiary-color: #a6b1e1;
-  --light-tertiary-color: #f3f6fb;
+  --pink: #FCD5D6;
+  --primary-color: #510F26;
+  --secondary-color: #651430;
+  --dark-secondary-color: #a52753;
+  --tertiary-color: #f04282;
+  --light-tertiary-color: #FCD5D6;
   --text-color: #343d48;
 
   --font-family: 'DM Sans', sans-serif;
