--- a/css/components/navbar.css
+++ b/css/components/navbar.css
@@ -1,3 +1,7 @@
+#logo {
+ transform: scale(0.8);
+}
+
 .navbar {
   position: fixed;
   top: 0;
@@ -11,6 +15,7 @@
   padding: 3rem 4rem 1rem;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .navbar .navbar__content .navbar__links li {
