--- a/css/globals.css
+++ b/css/globals.css
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  font-family: var(--font-family);
+  font-family: 'Catamaran', sans-serif;
 }
 
 html {
@@ -22,6 +22,10 @@ ul {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+a:hover{
+  transform: scale(1.1);
 }
 
 h1 {
@@ -45,8 +49,8 @@ h1 {
 
 p,
 .p {
-  font-weight: 400;
-  font-size: 1.6rem;
+  font-weight: 600;
+  font-size: 1.7rem;
   line-height: 3.5rem;
 }
 
